<resources>
    <string name="app_name">SecuriCam</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="welcome_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Don\'t have an Account ? Register</string>
    <string name="logo">Logo</string>
    <string name="list_notification">Notification</string>
    <string name="password_minimum">Password must be 6 characters or more.</string>
    <string name="password_empty">Password cannot be empty!!</string>
    <string name="name">Username</string>
    <string name="id_user">Id</string>
    <string name="have_acc">Have an account? Log in</string>
    <string name="min_name">Name must be 2 characters or more</string>
    <string name="detected">Detected</string>
    <string name="device">Iphone X</string>
    <string name="profile">Profile</string>
    <string name="add">Add Story</string>
    <string name="account">Account</string>
    <string name="logout">Log out</string>
    <string name="email_invalid">Please enter a valid email.</string>
    <string name="email_empty">Email cannot be empty!!</string>
    <string name="username_empty">Username cannot be empty!!</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="role">Set Device As</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register success, you can Login</string>
    <string name="request_failed">Request Failed</string>
    <string name="request_success">Request success, you can Login</string>
    <string name="logout_confirmation">Are you sure?</string>
    <string name="email_cam">Email</string>
    <string name="id_cam">Id</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_success">Logout Success</string>
    <string name="status">Connected</string>
    <string name="hint_text">Search Device</string>
    <string name="connected">Connected</string>
    <string name="search">Search</string>
    <string name="alert">There is someone in front of your home!</string>
    <string name="set_connect">Request Connection</string>
    <string name="set_disconnect">Disconnect</string>
    <!--<string name=""></string>-->
    <string name="observe_button">Observe Button</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="user_avatar">avatar</string>
    <string name="request">Request Pairing</string>
    <string name="observing">Observing…</string>
    <string name="empty_message">There\'s Nothing To Show</string>
    <string name="start_observe">Start Observe</string>
    <string name="list_connection">List Connection</string>
    <string name="client">CLIENT</string>
    <string name="remove_connection">Remove Connection</string>
    <string name="login">Login</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="this_user_want_to_connect_with_your_device">This user want to connect with your device</string>
    <string name="search_device">Search Device</string>
    <string name="notification">Notification</string>
    <string name="search_result">Search Result</string>
    <string name="search_instruction">Tap the search icon in app bar to search camera</string>

    <string-array name="roles">
        <item>CLIENT</item>
        <item>CAM</item>
    </string-array>
</resources>