<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
    <item android:id="@+id/ic_device"
        android:title="@string/device"
        android:icon = "@drawable/ic_baseline_control_camera_24"
        app:showAsAction="always" />

    <item android:id="@+id/account"
        android:title="@string/account"
        android:icon = "@drawable/ic_baseline_account_circle_24"
        app:showAsAction="always" />

    <item android:id="@+id/request"
        android:title="@string/request"
        android:icon = "@drawable/ic_person_add_white_24"
        app:showAsAction="always" />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon = "@drawable/ic_logout_white_24"
        app:showAsAction="always" />
    </group>
        app:showAsAction="ifRoom" />
</menu>