<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.detailnotification.DetailClientNotification">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detected"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_detected"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_detected"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_detected"
        app:layout_constraintTop_toBottomOf="@id/img_detected"
        tools:text="@string/detected"/>

    <TextView
        android:id="@+id/tv_cam_device"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_detected"
        app:layout_constraintStart_toStartOf="@id/tv_detected"
        app:layout_constraintTop_toBottomOf="@id/tv_detected"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/device" />

    <TextView
        android:id="@+id/tv_alert"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-thin"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_cam_device"
        app:layout_constraintStart_toStartOf="@id/tv_cam_device"
        app:layout_constraintTop_toBottomOf="@id/tv_cam_device"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/alert" />


</androidx.constraintlayout.widget.ConstraintLayout>